--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-product-site",
+  "name": "web_toy",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
@@ -8,5 +8,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^7.1.3"
-  }
+  },
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
